<resources>
    <string name="app_name">Shopping List</string>
    <string name="example">Example</string>

    <!-- bottom_navigation_view -->
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">Shop list</string>
    <string name="new_item">New item</string>

    <!-- activity_new_note -->
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>

    <!-- new_note_menu -->
    <string name="save">Save</string>
    <string name="bold">Bold</string>

    <!-- new_list_dialog -->
    <string name="new_list_name">New list name</string>
    <string name="update_list_name">Update list name</string>
    <string name="list_name">List name</string>
    <string name="create">Create</string>
    <string name="update">Update</string>

    <!-- delete_dialog -->
    <string name="delete_item">Do you want delete this item?</string>
    <string name="delete_alert">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <!-- shop_list_menu -->
    <string name="delete_list">Delete list</string>
    <string name="clear_list">Clear list</string>
    <string name="share_list">Share list</string>
    <string name="new_list_item">New item</string>
    <string name="save_item">Save item</string>

    <!-- activity_shop_list -->
    <string name="empty">Empty</string>

    <!-- edit_list_item_dialog -->
    <string name="update_list_item">Update List Item</string>
    <string name="name">Name</string>
    <string name="item_info">Item Info</string>
    <string name="update_item">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>