<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="6dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_marginTop="10dp">

            <TextView
                    android:text="@string/update_list_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTitle"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/edName"
                    android:hint="@string/name" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/edInfo"
                    android:hint="@string/item_info" />

            <Button
                    android:text="@string/update_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bUpdate" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>